# curloz-engine

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  imgui.ini  index.html  update.sh  xmake.lua
assets/config/: entity.json  global.toml  lights.json
assets/configs/: entity.toml
assets/shaders/: animation.frag  animation.vert  cubeMap.frag  cubeMap.vert  fragmentShader.frag  platform.frag  screenShader.frag  screenShader.vert  shaderEntity.frag  shaderEntity.vert  triangle_vert.vert
docs/html/: annotated.html  annotated_dup.js  base_8cpp.html  base_8cpp.js  base_8hpp.html  base_8hpp.js  base_8hpp_source.html  classes.html  cleaners_8cpp.html  cleaners_8cpp.js  cleaners_8hpp.html  cleaners_8hpp.js  cleaners_8hpp_source.html  clz__types_8hpp.html  clz__types_8hpp.js  clz__types_8hpp_source.html  commandbuffer_8cpp.html  commandbuffer_8cpp.js  commandbuffer_8hpp.html  commandbuffer_8hpp.js  commandbuffer_8hpp_source.html  dir_2559567b361f07c773f9d9dac257f09a.html  dir_2559567b361f07c773f9d9dac257f09a.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7bc5e25958a2fb25a8561f3aa0def6c5.html  dir_7bc5e25958a2fb25a8561f3aa0def6c5.js  dir_ba370b27de90820d1ea164f96e61d5b5.html  dir_ba370b27de90820d1ea164f96e61d5b5.js  dir_c7f79d9fead0a70cab4af348b59fbdf1.html  dir_c7f79d9fead0a70cab4af348b59fbdf1.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  (+82 more)
docs/latex/: annotated.tex  (+51 more)
include/: base.hpp  clz_types.hpp
misc/: Makefile
src/: base.cpp  main.cpp
(+311 files in other folders)
